<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="auto"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/nombre_artista"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/txtnombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/nombre"
                    android:textSize="25sp"
                    tools:ignore="InvalidId" />
                <!--  text artista-->
            </LinearLayout>
            <!--CalendarioVIew-->
            <LinearLayout
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/calendario"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />

                <CalendarView

                    android:id="@+id/txtcalendario"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_weight="1"></CalendarView>
            </LinearLayout>
            <!--    Selector de Tipo de Musica-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/tipo_musica"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />

                <Spinner
                    android:id="@+id/idSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"></Spinner>
            </LinearLayout>
            <!--Txt Valor de La Entrada-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"

                    android:text="@string/valor_entrada"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />

                <EditText
                    android:id="@+id/txt_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/valor"
                    android:inputType="number"
                    android:textSize="25sp" />

            </LinearLayout>
            <!--    Selector de Calificaciones-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/calificacion"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp" />

                <Spinner
                    android:id="@+id/idCalificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Registar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/registrar"
                    tools:ignore="InvalidId"></Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listView1"
                    android:layout_width="match_parent"
                    android:layout_height="214dp"></ListView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
